shched interface updated

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -1,38 +1,216 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Welcome to Scheduler!\n",
+    "\n",
+    "to get started let's load the teacher, course and classroom data from a file "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "input_file = \"sample_json_data.txt\"\n",
+    "with open(input_file,'r') as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "professors = data['professors']\n",
+    "prof_info = data['prof_info']\n",
+    "rooms = data['rooms']\n",
+    "room_capacities = data['room_capacities']\n",
+    "courses = data['courses']\n",
+    "course_no_students = data['course_no_students']\n",
+    "course_mins = data['course_mins']\n",
+    "course_days_weekly = data['course_days_weekly']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Smith\n",
+      "Lisa Jones\n",
+      "Mike Williams\n",
+      "Tim Simpson\n",
+      "Rachel Smith\n",
+      "Gregg Woods\n",
+      "Simon Valinski\n",
+      "Chu Yen\n",
+      "Peter Parker\n",
+      "Lisa Mullen\n",
+      "Elizabeth Walker\n",
+      "Brian K. Dickson\n",
+      "Jamir Abdullah\n"
+     ]
     }
    ],
    "source": [
-    "3+4"
+    "#see a list of professors below\n",
+    "print('\\n'.join(professors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "655\n",
+      "666\n",
+      "745a\n",
+      "745b\n",
+      "433\n",
+      "201\n",
+      "115a\n",
+      "115b\n"
+     ]
+    }
+   ],
+   "source": [
+    "#other lists for rooms and courses\n",
+    "print('\\n'.join(rooms))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "physics\n",
+      "chemistry\n",
+      "biochemistry\n",
+      "biology 1\n",
+      "biology 2\n",
+      "molecular biology\n",
+      "calculus 1\n",
+      "calculus 4\n",
+      "astrophysics\n"
+     ]
+    }
+   ],
+   "source": [
+    "#finally, the list of courses is shown\n",
+    "print('\\n'.join(courses))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Welcome to Scheduler!"
+    "## Scheduling the Teachers, Courses and Classrooms "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scheduler import CourseRoomProfAssigner as CRPassign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_formatter(course,start_time):\n",
+    "#function to output nice looking time\n",
+    "    hs,ms = start_time\n",
+    "    end = hs*6 + ms//10 + course_mins[course]//10\n",
+    "    end_time = (end//6,(end - (end//6)*6)*10)\n",
+    "    he,me = end_time\n",
+    "    output = '{:0>2}'.format(hs)+':'+'{:0>2}'.format(ms)+' to ' + '{:0>2}'.format(he)+':'+ '{:0>2}'.format(me) \n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MON\n",
+      "-----\n",
+      "calculus 4 - Jamir Abdullah - 655 - 16:00 to 17:00\n",
+      "biology 2 - Rachel Smith - 655 - 09:00 to 10:00\n",
+      "astrophysics - Simon Valinski - 666 - 16:00 to 17:00\n",
+      "\n",
+      "TUES\n",
+      "-----\n",
+      "molecular biology - Peter Parker - 745a - 10:30 to 11:30\n",
+      "biology 2 - Rachel Smith - 115b - 14:00 to 15:00\n",
+      "\n",
+      "WED\n",
+      "-----\n",
+      "physics - Brian K. Dickson - 115a - 11:00 to 12:00\n",
+      "calculus 1 - Elizabeth Walker - 115b - 15:00 to 16:00\n",
+      "chemistry - Gregg Woods - 745b - 08:30 to 10:00\n",
+      "biology 2 - Rachel Smith - 666 - 12:00 to 13:00\n",
+      "\n",
+      "THUR\n",
+      "-----\n",
+      "biology 1 - Mike Williams - 115b - 12:30 to 14:00\n",
+      "physics - Brian K. Dickson - 115a - 11:30 to 12:30\n",
+      "calculus 1 - Elizabeth Walker - 745b - 12:00 to 13:00\n",
+      "biochemistry - Gregg Woods - 115a - 16:00 to 17:30\n",
+      "\n",
+      "FRI\n",
+      "-----\n",
+      "calculus 1 - Elizabeth Walker - 115b - 16:00 to 17:00\n",
+      "chemistry - Gregg Woods - 666 - 10:00 to 11:30\n",
+      "physics - Brian K. Dickson - 115b - 12:30 to 13:30\n",
+      "calculus 4 - Jamir Abdullah - 201 - 12:00 to 13:00\n",
+      "biology 1 - Mike Williams - 745b - 10:30 to 12:00\n",
+      "biochemistry - Gregg Woods - 655 - 16:00 to 17:30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we compute the class schedule and show it below\n",
+    "full_schedule = CRPassign()\n",
+    "weekdays = ['mon','tues','wed','thur','fri']\n",
+    "for day in weekdays:\n",
+    "    schedule = full_schedule[day]\n",
+    "    print(day.upper())\n",
+    "    print('-----')\n",
+    "    for var,val in schedule.items():\n",
+    "#        for var,val in a.items:\n",
+    "        course,professor = var\n",
+    "        room,start_time = val\n",
+    "        print(\"%s - %s - %s - %s\" % (course, professor, room, time_formatter(course,start_time)))\n",
+    "    print('')"
+   ]
   }
  ],
  "metadata": {
@@ -51,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
