--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -6,27 +6,34 @@
    "source": [
     "# Welcome to Scheduler!\n",
     "\n",
-    "to get started let's load the teacher, course and classroom data from a file "
+    "### Getting started\n",
+    "let's load the teacher, course and classroom data from a file "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#run this cell (shitf + enter) to create the data we need\n",
     "import json\n",
+    "import JSON_Data_Maker as datamaker\n",
+    "\n",
+    "datamaker.make_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now the data we created is loaded. run this cell (shitf + enter)\n",
     "input_file = \"sample_json_data.txt\"\n",
     "with open(input_file,'r') as f:\n",
-    "    data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    data = json.load(f)\n",
+    "    \n",
     "professors = data['professors']\n",
     "prof_info = data['prof_info']\n",
     "rooms = data['rooms']\n",
@@ -39,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +70,13 @@
     }
    ],
    "source": [
-    "#see a list of professors below\n",
+    "#see a list of professors below. run this cell (shitf + enter)\n",
     "print('\\n'.join(professors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -88,13 +95,13 @@
     }
    ],
    "source": [
-    "#other lists for rooms and courses\n",
+    "#list for rooms. run this cell (shitf + enter)\n",
     "print('\\n'.join(rooms))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +121,7 @@
     }
    ],
    "source": [
-    "#finally, the list of courses is shown\n",
+    "#finally, the list of courses is shown. run this cell (shitf + enter)\n",
     "print('\\n'.join(courses))"
    ]
   },
@@ -127,19 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scheduler import CourseRoomProfAssigner as CRPassign"
+    "#run this cell (shitf + enter)\n",
+    "from teacherCourseCSP import CourseRoomProfAssigner as CRPassign"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#run this cell (shitf + enter)\n",
     "def time_formatter(course,start_time):\n",
     "#function to output nice looking time\n",
     "    hs,ms = start_time\n",
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -161,42 +170,43 @@
      "text": [
       "MON\n",
       "-----\n",
-      "calculus 4 - Jamir Abdullah - 655 - 16:00 to 17:00\n",
-      "biology 2 - Rachel Smith - 655 - 09:00 to 10:00\n",
-      "astrophysics - Simon Valinski - 666 - 16:00 to 17:00\n",
+      "physics - Brian K. Dickson - 115b - 14:00 to 15:00\n",
+      "chemistry - Peter Parker - 655 - 13:00 to 14:30\n",
+      "biology 2 - Peter Parker - 745b - 08:30 to 09:30\n",
+      "calculus 4 - Lisa Mullen - 201 - 10:30 to 11:30\n",
       "\n",
       "TUES\n",
       "-----\n",
-      "molecular biology - Peter Parker - 745a - 10:30 to 11:30\n",
-      "biology 2 - Rachel Smith - 115b - 14:00 to 15:00\n",
+      "physics - Brian K. Dickson - 115b - 12:30 to 13:30\n",
+      "biochemistry - Peter Parker - 655 - 13:00 to 14:30\n",
+      "biology 1 - Peter Parker - 115b - 09:00 to 10:30\n",
+      "calculus 1 - Chu Yen - 115a - 15:30 to 16:30\n",
       "\n",
       "WED\n",
       "-----\n",
-      "physics - Brian K. Dickson - 115a - 11:00 to 12:00\n",
-      "calculus 1 - Elizabeth Walker - 115b - 15:00 to 16:00\n",
-      "chemistry - Gregg Woods - 745b - 08:30 to 10:00\n",
-      "biology 2 - Rachel Smith - 666 - 12:00 to 13:00\n",
+      "chemistry - Peter Parker - 201 - 11:00 to 12:30\n",
+      "biology 2 - Peter Parker - 115b - 09:00 to 10:00\n",
+      "calculus 1 - Chu Yen - 115b - 13:00 to 14:00\n",
       "\n",
       "THUR\n",
       "-----\n",
-      "biology 1 - Mike Williams - 115b - 12:30 to 14:00\n",
-      "physics - Brian K. Dickson - 115a - 11:30 to 12:30\n",
-      "calculus 1 - Elizabeth Walker - 745b - 12:00 to 13:00\n",
-      "biochemistry - Gregg Woods - 115a - 16:00 to 17:30\n",
+      "biochemistry - Peter Parker - 666 - 09:00 to 10:30\n",
+      "biology 1 - Peter Parker - 115b - 10:30 to 12:00\n",
+      "biology 2 - Peter Parker - 655 - 12:00 to 13:00\n",
+      "calculus 1 - Chu Yen - 115b - 13:00 to 14:00\n",
       "\n",
       "FRI\n",
       "-----\n",
-      "calculus 1 - Elizabeth Walker - 115b - 16:00 to 17:00\n",
-      "chemistry - Gregg Woods - 666 - 10:00 to 11:30\n",
-      "physics - Brian K. Dickson - 115b - 12:30 to 13:30\n",
-      "calculus 4 - Jamir Abdullah - 201 - 12:00 to 13:00\n",
-      "biology 1 - Mike Williams - 745b - 10:30 to 12:00\n",
-      "biochemistry - Gregg Woods - 655 - 16:00 to 17:30\n",
+      "physics - Brian K. Dickson - 745b - 09:30 to 10:30\n",
+      "molecular biology - Peter Parker - 115a - 09:30 to 10:30\n",
+      "calculus 4 - Lisa Mullen - 433 - 10:00 to 11:00\n",
+      "astrophysics - Simon Valinski - 201 - 16:00 to 17:00\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "#run this cell (shitf + enter)\n",
     "#we compute the class schedule and show it below\n",
     "full_schedule = CRPassign()\n",
     "weekdays = ['mon','tues','wed','thur','fri']\n",
@@ -205,12 +215,18 @@
     "    print(day.upper())\n",
     "    print('-----')\n",
     "    for var,val in schedule.items():\n",
-    "#        for var,val in a.items:\n",
     "        course,professor = var\n",
     "        room,start_time = val\n",
     "        print(\"%s - %s - %s - %s\" % (course, professor, room, time_formatter(course,start_time)))\n",
     "    print('')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -229,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
