Cleaning up notebook.

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -12,11 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gcallah/GitProjects/Scheduler/scheduler\n"
+     ]
+    }
+   ],
    "source": [
-    "#run this cell (shitf + enter) to create the data we need\n",
+    "cd ../scheduler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'JSON_Data_Maker' has no attribute 'make_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-5b967b4067b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mJSON_Data_Maker\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdatamaker\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdatamaker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'JSON_Data_Maker' has no attribute 'make_data'"
+     ]
+    }
+   ],
+   "source": [
+    "# run this cell (shift + enter) to create the data we need\n",
     "import json\n",
     "import JSON_Data_Maker as datamaker\n",
     "\n",
@@ -29,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#now the data we created is loaded. run this cell (shitf + enter)\n",
+    "# now the data we created is loaded. run this cell (shitf + enter)\n",
     "input_file = \"sample_json_data.txt\"\n",
-    "with open(input_file,'r') as f:\n",
+    "with open(input_file, 'r') as f:\n",
     "    data = json.load(f)\n",
     "    \n",
     "professors = data['professors']\n",
@@ -70,7 +99,7 @@
     }
    ],
    "source": [
-    "#see a list of professors below. run this cell (shitf + enter)\n",
+    "# see a list of professors below. run this cell (shitf + enter)\n",
     "print('\\n'.join(professors))"
    ]
   },
@@ -95,7 +124,7 @@
     }
    ],
    "source": [
-    "#list for rooms. run this cell (shitf + enter)\n",
+    "# list for rooms. run this cell (shitf + enter)\n",
     "print('\\n'.join(rooms))"
    ]
   },
@@ -121,7 +150,7 @@
     }
    ],
    "source": [
-    "#finally, the list of courses is shown. run this cell (shitf + enter)\n",
+    "# finally, the list of courses is shown. run this cell (shitf + enter)\n",
     "print('\\n'.join(courses))"
    ]
   },
@@ -245,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
