gif assign format issues
gif assign format issues

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -7,60 +7,36 @@
     "# Welcome to Scheduler!\n",
     "\n",
     "### Getting started\n",
-    "let's load the teacher, course and classroom data from a file "
+    "To begin run the cell below (ctrl + enter) to create the sample data we need. This will take data from datamaker.py (which is the file  where you can add/edit/remove classes, teachers, classrooms; and exports that data into a file called sample_data.txt to be used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/gcallah/GitProjects/Scheduler/scheduler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cd ../scheduler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'JSON_Data_Maker' has no attribute 'make_data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-5b967b4067b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mJSON_Data_Maker\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdatamaker\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdatamaker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'JSON_Data_Maker' has no attribute 'make_data'"
-     ]
-    }
-   ],
-   "source": [
-    "# run this cell (shift + enter) to create the data we need\n",
     "import json\n",
-    "import JSON_Data_Maker as datamaker\n",
+    "import datamaker\n",
     "\n",
     "datamaker.make_data()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we load the created data into our program (run the cell below)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now the data we created is loaded. run this cell (shitf + enter)\n",
-    "input_file = \"sample_json_data.txt\"\n",
-    "with open(input_file, 'r') as f:\n",
+    "input_file = \"sample_data.txt\"\n",
+    "with open(input_file,'r') as f:\n",
     "    data = json.load(f)\n",
     "    \n",
     "professors = data['professors']\n",
@@ -74,8 +50,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is ready to use. \n",
+    "\n",
+    "Running the cell below shows us a list of available professors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +84,19 @@
     }
    ],
    "source": [
-    "# see a list of professors below. run this cell (shitf + enter)\n",
     "print('\\n'.join(professors))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, run the cell below to see a list of rooms"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,13 +115,19 @@
     }
    ],
    "source": [
-    "# list for rooms. run this cell (shitf + enter)\n",
     "print('\\n'.join(rooms))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally do the same for the list of courses"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +147,6 @@
     }
    ],
    "source": [
-    "# finally, the list of courses is shown. run this cell (shitf + enter)\n",
     "print('\\n'.join(courses))"
    ]
   },
@@ -158,28 +154,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scheduling the Teachers, Courses and Classrooms "
+    "The scheduler program will take the courses shown above and find a professor, classroom and time for them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scheduling the Teachers, Courses and Classrooms "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the following two cells"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run this cell (shitf + enter)\n",
-    "from teacherCourseCSP import CourseRoomProfAssigner as CRPassign"
+    "from teachercourse_csp import assigner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run this cell (shitf + enter)\n",
     "def time_formatter(course,start_time):\n",
-    "#function to output nice looking time\n",
     "    hs,ms = start_time\n",
     "    end = hs*6 + ms//10 + course_mins[course]//10\n",
     "    end_time = (end//6,(end - (end//6)*6)*10)\n",
@@ -189,8 +196,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are ready to compute the class schedule and display it below\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,46 +212,24 @@
      "output_type": "stream",
      "text": [
       "MON\n",
-      "-----\n",
-      "physics - Brian K. Dickson - 115b - 14:00 to 15:00\n",
-      "chemistry - Peter Parker - 655 - 13:00 to 14:30\n",
-      "biology 2 - Peter Parker - 745b - 08:30 to 09:30\n",
-      "calculus 4 - Lisa Mullen - 201 - 10:30 to 11:30\n",
-      "\n",
-      "TUES\n",
-      "-----\n",
-      "physics - Brian K. Dickson - 115b - 12:30 to 13:30\n",
-      "biochemistry - Peter Parker - 655 - 13:00 to 14:30\n",
-      "biology 1 - Peter Parker - 115b - 09:00 to 10:30\n",
-      "calculus 1 - Chu Yen - 115a - 15:30 to 16:30\n",
-      "\n",
-      "WED\n",
-      "-----\n",
-      "chemistry - Peter Parker - 201 - 11:00 to 12:30\n",
-      "biology 2 - Peter Parker - 115b - 09:00 to 10:00\n",
-      "calculus 1 - Chu Yen - 115b - 13:00 to 14:00\n",
-      "\n",
-      "THUR\n",
-      "-----\n",
-      "biochemistry - Peter Parker - 666 - 09:00 to 10:30\n",
-      "biology 1 - Peter Parker - 115b - 10:30 to 12:00\n",
-      "biology 2 - Peter Parker - 655 - 12:00 to 13:00\n",
-      "calculus 1 - Chu Yen - 115b - 13:00 to 14:00\n",
-      "\n",
-      "FRI\n",
-      "-----\n",
-      "physics - Brian K. Dickson - 745b - 09:30 to 10:30\n",
-      "molecular biology - Peter Parker - 115a - 09:30 to 10:30\n",
-      "calculus 4 - Lisa Mullen - 433 - 10:00 to 11:00\n",
-      "astrophysics - Simon Valinski - 201 - 16:00 to 17:00\n",
-      "\n"
+      "-----\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'course_mins' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-5359569bd8e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprofessor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mroom\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s - %s - %s - %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprofessor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroom\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime_formatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-e985f078d09b>\u001b[0m in \u001b[0;36mtime_formatter\u001b[0;34m(course, start_time)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtime_formatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mhs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhs\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m6\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mms\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m10\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcourse_mins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mend_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mhe\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mme\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'course_mins' is not defined"
      ]
     }
    ],
    "source": [
-    "#run this cell (shitf + enter)\n",
-    "#we compute the class schedule and show it below\n",
-    "full_schedule = CRPassign()\n",
+    "full_schedule = assigner()\n",
     "weekdays = ['mon','tues','wed','thur','fri']\n",
     "for day in weekdays:\n",
     "    schedule = full_schedule[day]\n",
@@ -274,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
