fixed assign format issue and filenames
fixed assign format issue and filenames

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -212,19 +212,39 @@
      "output_type": "stream",
      "text": [
       "MON\n",
-      "-----\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'course_mins' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-5359569bd8e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprofessor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mroom\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s - %s - %s - %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprofessor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroom\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime_formatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-e985f078d09b>\u001b[0m in \u001b[0;36mtime_formatter\u001b[0;34m(course, start_time)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtime_formatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mhs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhs\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m6\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mms\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m10\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcourse_mins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcourse\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mend_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mhe\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mme\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'course_mins' is not defined"
+      "-----\n",
+      "chemistry - Gregg Woods - 201 - 15:30 to 17:00\n",
+      "astrophysics - Chu Yen - 745a - 17:30 to 18:30\n",
+      "\n",
+      "TUES\n",
+      "-----\n",
+      "chemistry - Gregg Woods - 433 - 14:30 to 16:00\n",
+      "molecular biology - Peter Parker - 666 - 09:30 to 10:30\n",
+      "calculus 4 - Jamir Abdullah - 655 - 11:00 to 12:00\n",
+      "\n",
+      "WED\n",
+      "-----\n",
+      "physics - John Smith - 115b - 11:30 to 12:30\n",
+      "biology 1 - Peter Parker - 745b - 12:30 to 14:00\n",
+      "biology 2 - Peter Parker - 115b - 08:00 to 09:00\n",
+      "calculus 1 - Chu Yen - 745b - 10:30 to 11:30\n",
+      "\n",
+      "THUR\n",
+      "-----\n",
+      "physics - John Smith - 115a - 08:00 to 09:00\n",
+      "biochemistry - Peter Parker - 745b - 09:00 to 10:30\n",
+      "biology 2 - Peter Parker - 433 - 10:30 to 11:30\n",
+      "calculus 1 - Chu Yen - 115b - 13:00 to 14:00\n",
+      "\n",
+      "FRI\n",
+      "-----\n",
+      "physics - John Smith - 115a - 14:00 to 15:00\n",
+      "biochemistry - Peter Parker - 115b - 09:30 to 11:00\n",
+      "biology 1 - Peter Parker - 745b - 13:30 to 15:00\n",
+      "biology 2 - Peter Parker - 201 - 11:00 to 12:00\n",
+      "calculus 1 - Chu Yen - 115a - 16:30 to 17:30\n",
+      "calculus 4 - Jamir Abdullah - 115b - 12:00 to 13:00\n",
+      "\n"
      ]
     }
    ],
