--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -1,18 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gcallah/GitProjects/Scheduler/scheduler\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd ../scheduler"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Welcome to Scheduler!\n",
     "\n",
     "### Getting started\n",
-    "To begin run the cell below (ctrl + enter) to create the sample data we need. This will take data from datamaker.py (which is the file  where you can add/edit/remove classes, teachers, classrooms; and exports that data into a file called sample_data.txt to be used."
+    "To begin run the cell below (shift + enter) to create the sample data we need. This will take data from datamaker.py (which is the file  where you can add/edit/remove classes, teachers, classrooms; and exports that data into a file called sample_data.txt to be used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,37 +230,37 @@
      "text": [
       "MON\n",
       "-----\n",
-      "chemistry - Gregg Woods - 201 - 15:30 to 17:00\n",
-      "astrophysics - Chu Yen - 745a - 17:30 to 18:30\n",
+      "physics - Lisa Jones - 745b - 14:00 to 15:00\n",
+      "chemistry - John Smith - 745b - 13:00 to 14:30\n",
+      "biology 1 - Peter Parker - 745b - 08:00 to 09:30\n",
+      "calculus 1 - Simon Valinski - 115b - 12:00 to 13:00\n",
+      "calculus 4 - Chu Yen - 433 - 14:00 to 15:00\n",
       "\n",
       "TUES\n",
       "-----\n",
-      "chemistry - Gregg Woods - 433 - 14:30 to 16:00\n",
-      "molecular biology - Peter Parker - 666 - 09:30 to 10:30\n",
-      "calculus 4 - Jamir Abdullah - 655 - 11:00 to 12:00\n",
+      "physics - Lisa Jones - 115b - 13:30 to 14:30\n",
+      "biology 2 - Peter Parker - 745b - 10:30 to 11:30\n",
+      "molecular biology - Peter Parker - 433 - 12:00 to 13:00\n",
+      "astrophysics - Simon Valinski - 655 - 12:00 to 13:00\n",
       "\n",
       "WED\n",
       "-----\n",
-      "physics - John Smith - 115b - 11:30 to 12:30\n",
-      "biology 1 - Peter Parker - 745b - 12:30 to 14:00\n",
-      "biology 2 - Peter Parker - 115b - 08:00 to 09:00\n",
-      "calculus 1 - Chu Yen - 745b - 10:30 to 11:30\n",
+      "physics - Lisa Jones - 115a - 10:30 to 11:30\n",
+      "chemistry - John Smith - 115b - 15:30 to 17:00\n",
+      "biology 1 - Peter Parker - 115b - 11:00 to 12:30\n",
+      "biology 2 - Peter Parker - 115b - 12:30 to 13:30\n",
+      "calculus 1 - Simon Valinski - 115a - 12:30 to 13:30\n",
       "\n",
       "THUR\n",
       "-----\n",
-      "physics - John Smith - 115a - 08:00 to 09:00\n",
-      "biochemistry - Peter Parker - 745b - 09:00 to 10:30\n",
-      "biology 2 - Peter Parker - 433 - 10:30 to 11:30\n",
-      "calculus 1 - Chu Yen - 115b - 13:00 to 14:00\n",
+      "biochemistry - Gregg Woods - 115b - 13:00 to 14:30\n",
+      "biology 2 - Peter Parker - 433 - 11:00 to 12:00\n",
       "\n",
       "FRI\n",
       "-----\n",
-      "physics - John Smith - 115a - 14:00 to 15:00\n",
-      "biochemistry - Peter Parker - 115b - 09:30 to 11:00\n",
-      "biology 1 - Peter Parker - 745b - 13:30 to 15:00\n",
-      "biology 2 - Peter Parker - 201 - 11:00 to 12:00\n",
-      "calculus 1 - Chu Yen - 115a - 16:30 to 17:30\n",
-      "calculus 4 - Jamir Abdullah - 115b - 12:00 to 13:00\n",
+      "biochemistry - Gregg Woods - 666 - 13:30 to 15:00\n",
+      "calculus 1 - Simon Valinski - 745b - 15:30 to 16:30\n",
+      "calculus 4 - Chu Yen - 115b - 17:00 to 18:00\n",
       "\n"
      ]
     }
@@ -286,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
