user friendly. Less code and excel format
user friendly. Less code and excel format

--- a/notebook/SchedInterface-Excel.ipynb
+++ b/notebook/SchedInterface-Excel.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading your excel spreadsheet data\n",
+    "### Loading your excel spreadsheet data. You can download \"my_data.xlsx\" and edit with your own data (i.e: teachers, courses, rooms)\n",
     "\n",
     "To do this please run the cell below (press Ctrl + Enter)."
    ]
